@@ -1,5 +1,13 @@
 $Id$
 
+2015-03-20  Christian Franke  <franke@computer.org>
+
+	drivedb.h:
+	- Crucial/Micron MX100/MX200/M5x0/M600 Client SSDs: Rename, add MX200
+	- Sandforce Driven SSDs: ATP Velocity MIV, Mushkin Chronos Enhanced
+	- JMicron based SSDs: ADATA SP310
+	- Plextor M3/M5/M6 Series SSDs: Rename, add M6M, M6S
+
 2015-03-13  Douglas Gilbert  <dgilbert@interlog.com>
 
 	scsiata.cpp
